# zenn-ai-agent-hackathon

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/agents/judge/: judge_agent.py
src/api/: main.py
src/api/routes/: upload.py
src/api/schemas/: judge.py
src/api/services/: upload_service.py
src/api/utils/: json_utils.py
